<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/session_memory_imgvMemory"
        android:src="@drawable/ic_landscape_black_24dp"
        app:layout_widthPercent="100%"
        app:layout_aspectRatio="178%"
        />
    <TextView
        android:id="@+id/session_memory_txtvTitle"
        android:layout_below="@id/session_memory_imgvMemory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jouw_herinnering"
        />
    <TextView
        android:id="@+id/session_memory_author"
        android:layout_below="@id/session_memory_txtvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auteur"
        />
    <TextView
        android:id="@+id/session_memory_description"
        android:layout_below="@id/session_memory_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/een_beschrijving_van_jouw_herinnering"
        />
    <TextView
        android:id="@+id/session_memory_date_location"
        android:layout_below="@id/session_memory_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_25_02_2014_locatie"
        />
</android.support.percent.PercentRelativeLayout>
