<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:layout_marginTop="50dp"
    tools:context="be.sanderdebleecker.herinneringsapp.LoginFragment">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgvLogin"
        app:layout_widthPercent="60%"
        app:layout_marginLeftPercent="20%"
        app:layout_marginRightPercent="20%"
        app:layout_aspectRatio="100%"
        android:src="@drawable/ic_icon"
        />
    <!--USER & PASS-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="15%"
        app:layout_marginRightPercent="5%"
        android:layout_below="@id/imgvLogin"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawablePadding ="10dp"
            android:hint="@string/Username"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="15%"
        app:layout_marginRightPercent="5%"
        android:layout_below="@id/txtilUser"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding ="10dp"
            android:hint="@string/password"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <!--LOGIN & REGISTER -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:padding="12dp"
        android:text="@string/login"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        android:background="@drawable/border_button"
        android:layout_below="@id/txtilPassword"
        />
    <TextView
        android:id="@+id/txtvOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/of"
        android:gravity="center"
        android:layout_margin="8dp"
        android:layout_below="@id/btnLogin"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/registreer"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        android:background="@drawable/border_button"
        android:layout_below="@id/txtvOf"
        />
</android.support.percent.PercentRelativeLayout>
