<?xml version="1.0" encoding="utf-8"?>

<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_session_txtilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:id="@+id/new_session_txtName"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/new_session_btnDate"
        style="@android:style/Widget.EditText"
        android:layout_below="@+id/new_session_txtilName"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        android:hint="@string/defaultDate"/>
    <!--ALBUMS-->
    <android.support.v7.widget.AppCompatTextView
        android:layout_below="@+id/new_session_btnDate"
        android:id="@+id/new_session_txtvAlbums"
        android:text="@string/Albums"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        />
    <!--SEARCH-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_session_txtilSearch"
        android:layout_below="@+id/new_session_txtvAlbums"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:id="@+id/new_session_txtSearch"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <!--RECYCLERVIEW-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/new_session_recyclerview"
        android:layout_below="@+id/new_session_txtilSearch"
        app:layout_heightPercent="60%"
        android:layout_width="match_parent"
        />
</android.support.percent.PercentRelativeLayout>