<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Q1,A1,Q2,A2-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilQ1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/QuestionA"
            android:id="@+id/etxtQuestion1"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilA1"
        android:layout_below="@id/txtilQ1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Answer1"
            android:id="@+id/etxtAnswer1"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilQ2"
        android:layout_below="@id/txtilA1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Question2"
            android:id="@+id/etxtQuestion2"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilA2"
        android:layout_below="@id/txtilQ2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Answer2"
            android:id="@+id/etxtAnswer2"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
</android.support.percent.PercentRelativeLayout>