<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Username-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:id="@+id/etxtUsername"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <!--UserPassword,Confirm-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilPassword"
        android:layout_below="@id/txtilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:id="@+id/etxtPassword"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtilCPassword"
        android:layout_below="@id/txtilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_widthPercent="80%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/ConfirmPassword"
            android:id="@+id/etxtConfirmPassword"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
</android.support.percent.PercentRelativeLayout>