<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/coordinatorLayoutNewMemoryF"
    tools:context=".NewMemoryFragment" >
    <android.support.v7.widget.Toolbar
        android:id="@+id/new_memory_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <android.support.v4.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_marginTop="60dp"
            android:paddingBottom="25dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearlayoutNewMemoryFContent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_container"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    >
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:id="@+id/imgvMedia"
                        android:src="@drawable/ic_landscape_black_24dp"
                        android:layout_gravity="center"
                        />
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtvMedia"
                        android:text="Voeg media toe"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etxtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/title">
                    </android.support.design.widget.TextInputEditText>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etxtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="8"
                        android:minLines="6"
                        android:gravity="top|left"
                        android:maxLines="10"
                        android:inputType="text"
                        android:hint="@string/description">
                    </android.support.design.widget.TextInputEditText>
                </android.support.design.widget.TextInputLayout>
                <!--LOCATION-->
                <Button
                    android:id="@+id/btnLocation"
                    style="@android:style/Widget.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/defaultLocation" />
                <!--TIMESTAMP-->
                <Button
                    android:id="@+id/btnDate"
                    style="@android:style/Widget.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/defaultDate"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    <!--BOTTOM SHEET-->
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/bottomsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.BottomSheet.Modal"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>